--- a/src/components/Navbar/Navbar.scss
+++ b/src/components/Navbar/Navbar.scss
@@ -7,8 +7,9 @@
   right: 0;
   display: flex;
   justify-content: space-between;
-  margin: 40px;
-  margin-bottom: 90px;
+  align-items: center;
+  padding: 40px;
+  padding-bottom: 90px;
 
   .logo {
     width: 152px;
@@ -43,6 +44,53 @@
             rgba(255, 255, 255, 0) 100%
           );
         }
+      }
+    }
+
+    @media (max-width: 992px) {
+      display: none;
+    }
+  }
+
+  .hamburger-menu {
+    display: none;
+    @media (max-width: 992px) {
+      display: unset;
+    }
+  }
+
+  @media (max-width: 576px) {
+    padding: 40px 20px;
+  }
+}
+
+.hamburger {
+  @media (max-width: 992px) {
+    height: 100vh;
+    background-color: $clr-black;
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-start;
+    align-items: flex-start;
+    z-index: 100;
+
+    .nav-links {
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      justify-content: center;
+      width: 100%;
+      height: 100%;
+    }
+
+    .hamburger-menu {
+      position: absolute;
+      top: 50px;
+      right: 20px;
+
+      &:active {
+        border-color: $clr-white !important;
+        color: $clr-black !important;
       }
     }
   }
