--- a/src/pages/HomePage/BenefitsSection/BenefitsSection.scss
+++ b/src/pages/HomePage/BenefitsSection/BenefitsSection.scss
@@ -3,17 +3,32 @@
 .benefits-section {
   display: flex;
   gap: 133px;
+  margin-bottom: 140px;
 
   .benefits-mockup {
     max-width: 625px;
     width: 100%;
+    object-fit: cover;
+
+    @media (min-width: 993px) and (max-width: 1200px) {
+      margin-left: -120px;
+    }
+
+    @media (max-width: 992px) {
+      margin-bottom: 50px;
+    }
   }
 
   .benefits-content {
     max-width: 508px;
+    margin-right: 20px;
 
     .section-title {
       margin-bottom: 50px;
+
+      @media (max-width: 992px) {
+        margin-bottom: 30px;
+      }
     }
 
     .benefits-wrapper {
@@ -24,6 +39,14 @@
         .arrow {
           display: inline-block;
           margin-right: 25px;
+
+          @media (max-width: 576px) {
+            margin-right: 15px;
+          }
+        }
+
+        @media (max-width: 576px) {
+          font-size: 22px;
         }
       }
 
@@ -32,5 +55,16 @@
         margin-bottom: 30px;
       }
     }
+  }
+
+  @media (max-width: 992px) {
+    flex-direction: column;
+    align-items: center;
+    padding-inline: 20px;
+    gap: 0;
+  }
+
+  @media (max-width: 576px) {
+    margin-bottom: 50px;
   }
 }
