--- a/src/styles/variables.scss
+++ b/src/styles/variables.scss
@@ -3,4 +3,4 @@ $clr-white: #ffffff;
 $clr-white-50: #ffffff29;
 $clr-black: #051114;
 $clr-light-blue: #2657a41a;
-$clr-hover-blue: #34c6ffa7;
+$clr-hover-blue: #34c5ff;
