--- a/src/components/Navbar/Navbar.scss
+++ b/src/components/Navbar/Navbar.scss
@@ -56,15 +56,38 @@
     }
   }
 
-  .hamburger-menu {
+  .hamburger-menu-btn {
     display: none;
     @media (max-width: 992px) {
-      display: unset;
+      display: flex;
     }
   }
 
   @media (max-width: 576px) {
     padding: 25px 20px;
+  }
+}
+
+.hamburger-menu-btn {
+  position: absolute;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  top: 33px;
+  right: 20px;
+  height: 32px;
+  width: 45px;
+  border-radius: 5px;
+  border: 1px solid $clr-white-50;
+  background-color: $clr-white;
+
+  &:active {
+    transform: scale(0.95);
+  }
+
+  @media (min-width: 576px) and (max-width: 992px) {
+    top: 50px;
+    right: 40px;
   }
 }
 
@@ -85,17 +108,6 @@
       justify-content: center;
       width: 100%;
       height: 100%;
-    }
-
-    .hamburger-menu {
-      position: absolute;
-      top: 33px;
-      right: 20px;
-
-      &:active {
-        border-color: $clr-white !important;
-        color: $clr-black !important;
-      }
     }
   }
 }
