--- a/src/pages/HomePage/FeatureSection/FeatureCard/FeatureCard.scss
+++ b/src/pages/HomePage/FeatureSection/FeatureCard/FeatureCard.scss
@@ -10,6 +10,7 @@
   background: $clr-white;
   box-shadow: 0px 6px 50px 5px rgba(6, 14, 26, 0.05);
   transition: all 0.3s ease;
+  overflow: hidden;
 
   .feature-icon {
     margin: 0 auto;
