--- a/src/pages/HomePage/NewsSection/NewsCard/NewsCard.scss
+++ b/src/pages/HomePage/NewsSection/NewsCard/NewsCard.scss
@@ -1,7 +1,7 @@
 @import "../../../../styles/global.scss";
 
 .news-card {
-  max-width: 530px;
+  width: 45%;
 
   .news-img {
     width: 100%;
@@ -11,10 +11,13 @@
 
   .credit-line {
     display: flex;
-    gap: 60px;
+    gap: 50px;
     @include inter(16px, $clr-black, 400, 160%);
     margin-bottom: 22px;
 
+    @media (max-width: 1200px) {
+      gap: 40px;
+    }
     @media (max-width: 576px) {
       gap: 30px;
     }
@@ -36,7 +39,7 @@
     margin-bottom: 35px;
   }
 
-  @media (max-width: 1200px) {
-    max-width: 520px;
+  @media (max-width: 992px) {
+    width: 100%;
   }
 }
