--- a/src/pages/HomePage/NewsSection/NewsSection.scss
+++ b/src/pages/HomePage/NewsSection/NewsSection.scss
@@ -17,6 +17,14 @@
     display: flex;
     flex-wrap: wrap;
     justify-content: center;
-    gap: 30px;
+    gap: 45px;
+
+    @media (max-width: 992px) {
+      flex-direction: column;
+    }
+  }
+
+  @media (max-width: 576px) {
+    margin-bottom: 50px;
   }
 }
